<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/home_button"
        android:icon="@drawable/home_icon"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="always"/>
    <item
        android:id="@+id/logout_view"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="100"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:orderInCategory="100"
                android:title="@string/logout"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>