<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical" 
    
    >
  

    <TextView
        android:id="@+id/userTypeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="42dp"
        android:text="@string/you_are_logged_in_as"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/welcome_user"
        android:textColor="@color/white"
        android:textSize="18sp" />
    
    <Button
        android:id="@+id/getBeatPlan"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_select_action"
        android:drawableLeft="@drawable/get_beat_plan"
        android:onClick="getBeatPlan"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/get_beat_plan"
        android:textColor="@color/white"
        android:typeface="serif" />

</LinearLayout>