<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <EditText
            android:id="@+id/dist_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_distributon_name"
            android:layout_alignBottom="@+id/tv_distributon_name"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@+id/tv_distributon_name"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:textColor="@color/white"
            android:textSize="15sp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tv_distributon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="23dp"
            android:text="@string/distributor_name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_distributor_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_distributon_name"
            android:layout_below="@+id/dist_name"
            android:layout_marginTop="24dp"
            android:text="@string/distributor_code"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_dist_code"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_distributor_code"
            android:layout_alignBottom="@+id/tv_distributor_code"
            android:layout_alignLeft="@+id/dist_name"
            android:layout_alignRight="@+id/dist_name"
            android:ems="10"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/scanImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/tv_distributor_code"
            android:layout_toRightOf="@+id/et_dist_code"
            android:src="@drawable/barcode_icon" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/visits"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="#f7f7f7" >

            <TextView
                android:id="@+id/item_beat_plan_distributor_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="16dp"
                android:text="@string/caf_details"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total_cafs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/item_beat_plan_distributor_code"
                android:layout_below="@+id/item_beat_plan_distributor_code"
                android:layout_marginTop="21dp"
                android:text="@string/total_cafs" />

            <TextView
                android:id="@+id/tv_accepted_cafs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_total_cafs"
                android:layout_below="@+id/et_total_cafs"
                android:layout_marginTop="16dp"
                android:text="@string/accepted_cafs" />

            <EditText
                android:id="@+id/et_accepted_cafs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_total_cafs"
                android:layout_alignRight="@+id/et_total_cafs"
                android:layout_below="@+id/et_total_cafs"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_total_cafs"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_total_cafs"
                android:layout_marginLeft="22dp"
                android:layout_toRightOf="@+id/tv_accepted_cafs"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/tv_rejected_cafs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_accepted_cafs"
                android:layout_below="@+id/et_accepted_cafs"
                android:layout_marginTop="16dp"
                android:text="@string/rejected_cafs" />

            <EditText
                android:id="@+id/et_rejected_cafs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_accepted_cafs"
                android:layout_alignRight="@+id/et_accepted_cafs"
                android:layout_below="@+id/et_accepted_cafs"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/tv_returned_cafs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_rejected_cafs"
                android:layout_below="@+id/et_rejected_cafs"
                android:layout_marginTop="16dp"
                android:text="@string/returned_cafs" />

            <EditText
                android:id="@+id/et_returned_cafs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_returned_cafs"
                android:layout_alignLeft="@+id/et_rejected_cafs"
                android:layout_alignRight="@+id/et_rejected_cafs"
                android:ems="10"
                android:inputType="number" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/et_total_cafs"
                android:background="@color/actionbar_background_end" />
        </RelativeLayout>

        <TextView
            android:id="@+id/visitCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/visits"
            android:layout_alignBottom="@+id/visits"
            android:layout_alignLeft="@+id/et_dist_code"
            android:text="@string/visits_status"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/visits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_distributor_code"
            android:layout_below="@+id/scanImage"
            android:layout_marginTop="14dp"
            android:text="@string/visits"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_margin="4dp"
        android:gravity="center" >

        <Button
            android:id="@+id/digitalSignatureButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="1dp"
            android:layout_toRightOf="@+id/cameraButton"
            android:background="@drawable/green_button_select_action"
            android:drawableLeft="@drawable/dig_sig"
            android:onClick="onDigitalSignatureButtonClick"
            android:paddingLeft="4dp"
            android:text="@string/signature"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_above="@+id/new_caf_submit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/view1"
            android:background="@drawable/green_button_select_action"
            android:drawableLeft="@drawable/ic_camera_icon"
            android:onClick="onCameraButtonClick"
            android:paddingLeft="10dp"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/new_caf_submit"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/digitalSignatureButton"
            android:layout_marginTop="5dp"
            android:background="@drawable/blue_button_click_action"
            android:onClick="saveCAF"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/digitalSignatureButton"
            android:background="@color/white"
            android:visibility="gone" />

        <View
            android:id="@+id/view1"
            android:layout_width="0.5dip"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/new_caf_submit" >

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/image_border"
                android:onClick="onCameraButtonClick"
                android:scaleType="fitXY"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/signaturePreview"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/image_border"
                android:onClick="onDigitalSignatureButtonClick"
                android:scaleType="fitXY"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>