<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_block"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:visibility="gone" >

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/login_username"
            android:layout_alignRight="@+id/login_username"
            android:layout_centerVertical="true"
            android:background="@drawable/button_border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/black"
            android:textSize="14sp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/login_password"
            android:layout_alignRight="@+id/login_password"
            android:layout_below="@+id/login_password"
            android:layout_marginTop="22dp"
            android:background="@drawable/blue_button_click_action"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_above="@+id/login_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="26dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_border"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/appLogoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:src="@drawable/rtlogo" />

</RelativeLayout>