<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/listview_header_color_gold" >

            <TextView
                android:id="@+id/item_beat_plan_distributor_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/item_beat_plan_dist_name_header"
                android:text="@string/schedule"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/item_beat_plan_dist_visit_header"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/item_beat_plan_distributor_code"
                android:text="@string/visits_frequency"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/item_beat_plan_dist_name_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/item_beat_plan_distributor_code"
                android:layout_alignBottom="@+id/item_beat_plan_distributor_code"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="2dp"
                android:text="@string/distributors"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </RelativeLayout>

        <ListView
            android:id="@+id/beatPlanList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relativeLayout1"
            android:layout_marginTop="1dp"
            android:divider="@color/white"
            android:dividerHeight="1dip" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>